modules/gdscript/tests/scripts/analyzer/errors/for_loop_on_hard_string.gd
func test():
	var hard_string := 'a'

	for x in hard_string:
		if x is int:
			pass
